Change theme color for better support for dark mode

--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
             "sizes": "512x512"
         }
     ],
-    "background_color": "#e5e5e5",
+    "background_color": "#000",
     "display": "standalone",
-    "theme_color": "#e5e5e5"
+    "theme_color": "#000"
 }
